--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
         <h3>ensuresafe | Full time</h3>
         <h2>WEB DEVELOPER</h2>
         <button type="menu"><a href="#">refer a friends</a></button>
-        <button type="menu"><a href="index.html">I'M Interested</a></button>
+        <button type="menu"><a href="form.html">I'M Interested</a></button>
     </section>
     <section id="three">
         <div id="description">
@@ -155,7 +155,7 @@
                         vero atque totam doloribus quibusdam nam mollitia tempora ad dignissimos a minima amet maiores
                         natus deserunt corporis!</li>
                 </ul>
-                <button type="menu" class="last"><a href="index.html">I'M Interested</a></button>
+                <button type="menu" class="last"><a href="form.html">I'M Interested</a></button>
             </div>
             <div class="information">
                 <h3>job information</h3>
